rename all partials

--- a/station/orbiter.hbs
+++ b/station/orbiter.hbs
@@ -69,21 +69,21 @@
 </div>
 
 <!-- Don't forget to include a header -->
-{{>misc/_view-in-browser}}
+{{>misc/view-in-browser}}
 
 
 <!-- Include all your body email components here -->
-{{>header/_header-full-centre}}
-{{>hero/_hero-img-title-text-cta}}
-{{>hero/_hero-img}}
-{{>list/_list-img-title-author}}
-{{>hero/_hero-title-text-cta}}
-{{>two-up/_two-up-img}}
-{{>hero/_hero-title-text}}
-{{>list/_list-links}}
+{{>header/header-full-centre}}
+{{>hero/hero-img-title-text-cta}}
+{{>hero/hero-img}}
+{{>list/list-img-title-author}}
+{{>hero/hero-title-text-cta}}
+{{>two-up/two-up-img}}
+{{>hero/hero-title-text}}
+{{>list/list-links}}
 
 <!-- Don't forget to include a footer -->
-{{>footer/_footer-full}}
+{{>footer/footer-full}}
 
 </body>
 </html>
