replaces generic copy and unnecessary links

--- a/modules/article/article.hbs
+++ b/modules/article/article.hbs
@@ -14,7 +14,7 @@
                     <tr>
                       <td align="center" valign="top">
                         <a href="#" target="_blank">
-                          <img style="display: block; padding: 0 0 8px 0; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 150px; height: 84px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="150" height="84" border="0">
+                          <img style="display: block; padding: 0 0 8px 0; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 150px; height: 84px;" class="img-max" src="" alt="" width="150" height="84" border="0">
                         </a>
                       </td>
                     </tr>
@@ -44,7 +44,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Get started &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
