--- a/modules/four-up/four-up-centre.hbs
+++ b/modules/four-up/four-up-centre.hbs
@@ -17,7 +17,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="272" height="153" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="" alt="" width="272" height="153" border="0">
                               </a>
                             </td>
                           </tr>
@@ -28,7 +28,7 @@
                           </tr>
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -44,7 +44,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="272" height="153" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="" alt="" width="272" height="153" border="0">
                               </a>
                             </td>
                           </tr>
@@ -55,7 +55,7 @@
                           </tr>
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -75,7 +75,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="272" height="153" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="" alt="" width="272" height="153" border="0">
                               </a>
                             </td>
                           </tr>
@@ -86,7 +86,7 @@
                           </tr>
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -102,7 +102,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="272" height="153" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="" alt="" width="272" height="153" border="0">
                               </a>
                             </td>
                           </tr>
@@ -113,7 +113,7 @@
                           </tr>
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
