--- a/modules/three-up/three-up-title-text.hbs
+++ b/modules/three-up/three-up-title-text.hbs
@@ -21,7 +21,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                         </table>
@@ -41,7 +41,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                         </table>
@@ -61,7 +61,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                         </table>
