--- a/modules/two-up/two-up-title-text.hbs
+++ b/modules/two-up/two-up-title-text.hbs
@@ -21,7 +21,7 @@
                           </tr>
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -41,7 +41,7 @@
                           </tr>
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
