--- a/station/orbiter.hbs
+++ b/station/orbiter.hbs
@@ -30,7 +30,7 @@
       line-height: inherit !important;
     }
 
-    /* Outline styles */
+    /* styles */
     @media only screen and (max-width: 599px) {
       .content-table {
         width: 100% !important;
