--- a/modules/ecommerce/ecommerce-intro.hbs
+++ b/modules/ecommerce/ecommerce-intro.hbs
@@ -39,7 +39,7 @@
                               <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                   <td align="center">
-                                    <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk/" target="_blank">View order &#8594;</a>
+                                    <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">View order &#8594;</a>
                                   </td>
                                 </tr>
                               </table>
