--- a/modules/ecommerce/ecommerce-order-delivery.hbs
+++ b/modules/ecommerce/ecommerce-order-delivery.hbs
@@ -32,7 +32,7 @@
                                 </tr>
                                 <tr>
                                   <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="left">
-                                      Matt Harris <br>
+                                      John Doe <br>
                                       Address line 1 <br>
                                       Address line 2 <br>
                                       Bristol <br>
