--- a/modules/footer/footer-logo-links.hbs
+++ b/modules/footer/footer-logo-links.hbs
@@ -19,8 +19,8 @@
                               <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
                                   <td align="left">
-                                    <a href="http://outlinemail.co.uk">
-                                      <img class="mobile-align-center" style="display: block" src="http://outlinemail.co.uk/img/logo.png" width="200" height="20" border="0" alt="Outline Mail">
+                                    <a href="">
+                                      <img class="mobile-align-center" style="display: block" src="" width="200" height="20" border="0" alt="">
                                     </a>
                                   </td>
                                 </tr>
@@ -36,7 +36,7 @@
                               <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
                                   <td class="mobile-align-center" style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px;" align="right">
-                                    Outline Mail is a project by <a style="color: #38A1D6; text-decoration: none;" href="http://www.matt-harris.net">Matt Harris</a>
+                                     is a project by <a style="color: #38A1D6; text-decoration: none;" href="http://www.matt-harris.net">John Doe</a>
                                   </td>
                                 </tr>
                                 <tr>
