--- a/modules/footer/footer.hbs
+++ b/modules/footer/footer.hbs
@@ -12,7 +12,7 @@
                   <table border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tr>
                       <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px;" align="left">
-                        Outline Mail is a project by <a style="color: #38A1D6; text-decoration: none;" href="http://www.matt-harris.net">Matt Harris</a>
+                         is a project by <a style="color: #38A1D6; text-decoration: none;" href="http://www.matt-harris.net">John Doe</a>
                       </td>
                     </tr>
                     <tr>
