--- a/modules/gallery/gallery-four-centre.hbs
+++ b/modules/gallery/gallery-four-centre.hbs
@@ -17,7 +17,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="http://outlinemail.co.uk/img/gallery-placeholder.png" alt="Outline Mail" width="250" height="354" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="" alt="" width="250" height="354" border="0">
                               </a>
                             </td>
                           </tr>
@@ -35,7 +35,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Buy Now &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Buy Now &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
@@ -58,7 +58,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="http://outlinemail.co.uk/img/gallery-placeholder.png" alt="Outline Mail" width="250" height="354" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="" alt="" width="250" height="354" border="0">
                               </a>
                             </td>
                           </tr>
@@ -76,7 +76,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Buy Now &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Buy Now &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
@@ -103,7 +103,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="http://outlinemail.co.uk/img/gallery-placeholder.png" alt="Outline Mail" width="250" height="354" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="" alt="" width="250" height="354" border="0">
                               </a>
                             </td>
                           </tr>
@@ -121,7 +121,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Buy Now &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Buy Now &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
@@ -144,7 +144,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="http://outlinemail.co.uk/img/gallery-placeholder.png" alt="Outline Mail" width="250" height="354" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 250px; height: 354px;" class="img-max" src="" alt="" width="250" height="354" border="0">
                               </a>
                             </td>
                           </tr>
@@ -162,7 +162,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Buy Now &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Buy Now &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
