--- a/modules/header/header-full.hbs
+++ b/modules/header/header-full.hbs
@@ -5,8 +5,8 @@
       <table style="min-width: 320px;" class="content-table" align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
           <td style="padding: 16px 16px 16px 16px;" align="left" valign="top">
-            <a href="http://outlinemail.co.uk">
-              <img style="display: block" src="http://outlinemail.co.uk/img/logo-white.png" width="280" height="28" border="0" alt="Outline Mail">
+            <a href="">
+              <img style="display: block" src="img/logo-white.png" width="280" height="28" border="0" alt="">
             </a>
           </td>
         </tr>
