--- a/modules/hero/hero-img-title-text-cta-centre.hbs
+++ b/modules/hero/hero-img-title-text-cta-centre.hbs
@@ -13,7 +13,7 @@
                     <tr>
                       <td style="padding: 0 0 16px 0;" align="center">
                         <a href="#" target="_blank">
-                          <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 600px; height: 250px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="600" height="250" border="0">
+                          <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 600px; height: 250px;" class="img-max" src="" alt="" width="600" height="250" border="0">
                         </a>
                       </td>
                     </tr>
@@ -36,7 +36,7 @@
                               <table border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                   <td align="center">
-                                    <a style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Get started &#8594;</a>
+                                    <a style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                   </td>
                                 </tr>
                               </table>
