--- a/modules/list/list-img-title-author.hbs
+++ b/modules/list/list-img-title-author.hbs
@@ -21,7 +21,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" valign="top">
-                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="http://outlinemail.co.uk/img/min/circle-img-placeholder.jpg" alt="Outline Mail" width="40" height="40" border="0">
+                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="" alt="" width="40" height="40" border="0">
                             </td>
                             <td align="left" style="padding-left: 4px;" valign="top">
                               <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -47,7 +47,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" valign="top">
-                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="http://outlinemail.co.uk/img/min/circle-img-placeholder.jpg" alt="Outline Mail" width="40" height="40" border="0">
+                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="" alt="" width="40" height="40" border="0">
                             </td>
                             <td align="left" style="padding-left: 4px;" valign="top">
                               <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -73,7 +73,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" valign="top">
-                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="http://outlinemail.co.uk/img/min/circle-img-placeholder.jpg" alt="Outline Mail" width="40" height="40" border="0">
+                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="" alt="" width="40" height="40" border="0">
                             </td>
                             <td align="left" style="padding-left: 4px;" valign="top">
                               <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -99,7 +99,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" valign="top">
-                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="http://outlinemail.co.uk/img/min/circle-img-placeholder.jpg" alt="Outline Mail" width="40" height="40" border="0">
+                              <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 40px; height: 40px;" src="" alt="" width="40" height="40" border="0">
                             </td>
                             <td align="left" style="padding-left: 4px;" valign="top">
                               <table border="0" cellpadding="0" cellspacing="0" width="100%">
