--- a/modules/list/list-title-author.hbs
+++ b/modules/list/list-title-author.hbs
@@ -21,12 +21,12 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 20px; font-weight: normal; line-height: 30px;">
-                              <a style="color: #333333; text-decoration: none;" href="#">Outline Mail - Making HTML email ridiculously easy.</a>
+                              <a style="color: #333333; text-decoration: none;" href="#"> - Making HTML email ridiculously easy.</a>
                             </td>
                           </tr>
                           <tr>
                             <td align="left" style="color: #dce8ef; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px; text-transform: uppercase;">
-                              MATT HARRIS
+                              John Doe
                             </td>
                           </tr>
                         </table>
@@ -38,12 +38,12 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 20px; font-weight: normal; line-height: 30px;">
-                              <a style="color: #333333; text-decoration: none;" href="#">Outline Mail - Making HTML email ridiculously easy.</a>
+                              <a style="color: #333333; text-decoration: none;" href="#"> - Making HTML email ridiculously easy.</a>
                             </td>
                           </tr>
                           <tr>
                             <td align="left" style="color: #dce8ef; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px; text-transform: uppercase;">
-                              MATT HARRIS
+                              John Doe
                             </td>
                           </tr>
                         </table>
@@ -55,12 +55,12 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 20px; font-weight: normal; line-height: 30px;">
-                              <a style="color: #333333; text-decoration: none;" href="#">Outline Mail - Making HTML email ridiculously easy.</a>
+                              <a style="color: #333333; text-decoration: none;" href="#"> - Making HTML email ridiculously easy.</a>
                             </td>
                           </tr>
                           <tr>
                             <td align="left" style="color: #dce8ef; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px; text-transform: uppercase;">
-                              MATT HARRIS
+                              John Doe
                             </td>
                           </tr>
                         </table>
@@ -72,12 +72,12 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td align="left" style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 20px; font-weight: normal; line-height: 30px;">
-                              <a style="color: #333333; text-decoration: none;" href="#">Outline Mail - Making HTML email ridiculously easy.</a>
+                              <a style="color: #333333; text-decoration: none;" href="#"> - Making HTML email ridiculously easy.</a>
                             </td>
                           </tr>
                           <tr>
                             <td align="left" style="color: #dce8ef; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px; text-transform: uppercase;">
-                              MATT HARRIS
+                              John Doe
                             </td>
                           </tr>
                         </table>
