--- a/modules/three-up/three-up-button-centre.hbs
+++ b/modules/three-up/three-up-button-centre.hbs
@@ -18,7 +18,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="184" height="104" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="" alt="" width="184" height="104" border="0">
                               </a>
                             </td>
                           </tr>
@@ -29,7 +29,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 8px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                           <tr>
@@ -41,7 +41,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Get started &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
@@ -65,7 +65,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="184" height="104" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="" alt="" width="184" height="104" border="0">
                               </a>
                             </td>
                           </tr>
@@ -76,7 +76,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 8px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                           <tr>
@@ -88,7 +88,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Get started &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
@@ -112,7 +112,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="184" height="104" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="" alt="" width="184" height="104" border="0">
                               </a>
                             </td>
                           </tr>
@@ -123,7 +123,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 8px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                           <tr>
@@ -135,7 +135,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk" target="_blank">Get started &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
