--- a/modules/three-up/three-up-centre.hbs
+++ b/modules/three-up/three-up-centre.hbs
@@ -18,7 +18,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="184" height="104" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="" alt="" width="184" height="104" border="0">
                               </a>
                             </td>
                           </tr>
@@ -29,7 +29,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -46,7 +46,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="184" height="104" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="" alt="" width="184" height="104" border="0">
                               </a>
                             </td>
                           </tr>
@@ -57,7 +57,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -74,7 +74,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="184" height="104" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 184px; height: 104px;" class="img-max" src="" alt="" width="184" height="104" border="0">
                               </a>
                             </td>
                           </tr>
@@ -85,7 +85,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 32px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
