--- a/modules/three-up/three-up-feature.hbs
+++ b/modules/three-up/three-up-feature.hbs
@@ -19,13 +19,13 @@
                                 <tr>
                                   <td style="padding: 0 0 8px 0;" align="center">
                                     <a href="#" target="_blank">
-                                      <img style="display: block; font-family: arial, sans-serif; color: #333333; font-size: 14px; width: 120px; height: 120px;" src="http://outlinecss.co.uk/img/outline-mail/16x9-img-placeholder.png" alt="Outline Mail" width="120" height="120" border="0">
+                                      <img style="display: block; font-family: arial, sans-serif; color: #333333; font-size: 14px; width: 120px; height: 120px;" src="" alt="" width="120" height="120" border="0">
                                     </a>
                                   </td>
                                 </tr>
                                 <tr>
                                   <td style="color: #38a1d6; font-family: arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 27px;" align="center">
-                                    Matt Harris
+                                    John Doe
                                   </td>
                                 </tr>
                                 <tr>
@@ -48,7 +48,7 @@
                                 <tr>
                                   <td style="padding: 0 0 8px 0;" align="center">
                                     <a href="#" target="_blank">
-                                      <img style="display: block; font-family: arial, sans-serif; color: #333333; font-size: 14px; width: 120px; height: 120px;" src="http://outlinecss.co.uk/img/outline-mail/16x9-img-placeholder.png" alt="Outline Mail" width="120" height="120" border="0">
+                                      <img style="display: block; font-family: arial, sans-serif; color: #333333; font-size: 14px; width: 120px; height: 120px;" src="" alt="" width="120" height="120" border="0">
                                     </a>
                                   </td>
                                 </tr>
@@ -77,7 +77,7 @@
                                 <tr>
                                   <td style="padding: 0 0 8px 0;" align="center">
                                     <a href="#" target="_blank">
-                                      <img style="display: block; font-family: arial, sans-serif; color: #333333; font-size: 14px; width: 120px; height: 120px;" src="http://outlinecss.co.uk/img/outline-mail/16x9-img-placeholder.png" alt="Outline Mail" width="120" height="120" border="0">
+                                      <img style="display: block; font-family: arial, sans-serif; color: #333333; font-size: 14px; width: 120px; height: 120px;" src="" alt="" width="120" height="120" border="0">
                                     </a>
                                   </td>
                                 </tr>
