--- a/modules/two-up/two-up-button-centre.hbs
+++ b/modules/two-up/two-up-button-centre.hbs
@@ -17,7 +17,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="272" height="153" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="" alt="" width="272" height="153" border="0">
                               </a>
                             </td>
                           </tr>
@@ -28,7 +28,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 8px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                           <tr>
@@ -40,7 +40,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk/" target="_blank">Get started &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
@@ -63,7 +63,7 @@
                           <tr>
                             <td align="center">
                               <a href="#" target="_blank">
-                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="http://outlinemail.co.uk/img/16x9-img-placeholder.png" alt="Outline Mail" width="272" height="153" border="0">
+                                <img style="display: block; font-family: Helvetica, Arial, sans-serif; color: #333333; font-size: 14px; width: 272px; height: 153px;" class="img-max" src="" alt="" width="272" height="153" border="0">
                               </a>
                             </td>
                           </tr>
@@ -74,7 +74,7 @@
                           </tr>
                           <tr>
                             <td style="padding: 0 0 8px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px;" align="center">
-                              Outline is simple CSS starter boilerplate for any new web project.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.
                             </td>
                           </tr>
                           <tr>
@@ -86,7 +86,7 @@
                                     <table class="mobile-button-wrap" border="0" cellspacing="0" cellpadding="0">
                                       <tr>
                                         <td align="center">
-                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="http://outlinemail.co.uk/" target="_blank">Get started &#8594;</a>
+                                          <a class="mobile-button" style="background-color: #CCD1D9; border-top: 8px solid #CCD1D9; border-right: 16px solid #CCD1D9; border-bottom: 8px solid #CCD1D9; border-left: 16px solid #CCD1D9; display: inline-block; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 18px; font-weight: normal; line-height: 24px; text-decoration: none;" href="" target="_blank">Get started &#8594;</a>
                                         </td>
                                       </tr>
                                     </table>
