--- a/modules/two-up/two-up-text.hbs
+++ b/modules/two-up/two-up-text.hbs
@@ -16,7 +16,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project. Outline is simple CSS starter boilerplate for any new web project. Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat. Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat. Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
@@ -31,7 +31,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%">
                           <tr>
                             <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 24px; padding: 0 0 32px 0;" align="left">
-                              Outline is simple CSS starter boilerplate for any new web project. Outline is simple CSS starter boilerplate for any new web project. Outline is simple CSS starter boilerplate for any new web project. It can include a <a style="color: #38a1d6" href="#">text link</a>.
+                              Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat. Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat. Nulla facilisi. Maecenas nec ornare massa. Etiam ac tellus eget ante tristique volutpat.<a style="color: #38a1d6" href="#">text link</a>.
                             </td>
                           </tr>
                         </table>
