updates some configuration and fixes nam run watch not going to correct file

--- a/hub/index.hbs
+++ b/hub/index.hbs
@@ -71,15 +71,10 @@
 <!-- Don't forget to include a header -->
 {{>misc/view-in-browser}}
 
-
+{{>list/list-links}}
 <!-- Include all your body email components here -->
 {{>header/header-full-centre}}
-{{>hero/hero-img-title-text-cta}}
-{{>hero/hero-img}}
-{{>list/list-img-title-author}}
-{{>hero/hero-title-text-cta}}
-{{>two-up/two-up-img}}
-{{>hero/hero-title-text}}
+
 {{>list/list-links}}
 
 <!-- Don't forget to include a footer -->
