removed all but the basic template

--- a/layouts/index.tpl.html
+++ b/layouts/index.tpl.html
@@ -65,7 +65,7 @@
 
 <!-- hidden preheader text - Remember to change it! -->
 <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;mso-hide:all;">
-  Outline mail - making html email easy.
+  MailFleet Email Development
 </div>
 
 <!-- Don't forget to include a header -->
