add some more base modules to index

--- a/hub/index.hbs
+++ b/hub/index.hbs
@@ -73,7 +73,8 @@
 {{>header/header-full-centre}}
 
 <!-- Include all your body email components here -->
-
+{{>one-up/one-up}}
+{{>four-up/four-up}}
 
 
 <!-- Don't forget to include a footer -->
